[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/main_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Roboto-Black.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -240.0
margin_top = -270.0
margin_right = 240.0
margin_bottom = 450.0
rect_scale = Vector2( 2, 2 )
color = Color( 0, 0, 0, 1 )

[node name="MenuGroup" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 21.0527
margin_top = 61.0526
margin_right = -18.9473
margin_bottom = -58.9474

[node name="Title" type="Label" parent="MenuGroup"]
margin_right = 440.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
text = "P I P E D R E A M "
align = 1

[node name="MarginContainer" type="MarginContainer" parent="MenuGroup"]
margin_top = 45.0
margin_right = 440.0
margin_bottom = 500.0
custom_constants/margin_top = 90
custom_constants/margin_bottom = 90

[node name="ButtonGroup" type="VBoxContainer" parent="MenuGroup/MarginContainer"]
margin_top = 90.0
margin_right = 440.0
margin_bottom = 365.0
custom_constants/separation = 10

[node name="Tutorial" type="Button" parent="MenuGroup/MarginContainer/ButtonGroup"]
margin_right = 440.0
margin_bottom = 47.0
size_flags_horizontal = 5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_hover = Color( 0.317647, 0.317647, 0.317647, 1 )
text = "Tutorial"
flat = true

[node name="BlitzButton" type="Button" parent="MenuGroup/MarginContainer/ButtonGroup"]
margin_top = 57.0
margin_right = 440.0
margin_bottom = 104.0
size_flags_horizontal = 5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_hover = Color( 0.317647, 0.317647, 0.317647, 1 )
text = "Blitz"
flat = true

[node name="AIBlitzButton" type="Button" parent="MenuGroup/MarginContainer/ButtonGroup"]
margin_top = 114.0
margin_right = 440.0
margin_bottom = 161.0
size_flags_horizontal = 5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_hover = Color( 0.317647, 0.317647, 0.317647, 1 )
text = "AI Blitz"
flat = true

[node name="VersusButton" type="Button" parent="MenuGroup/MarginContainer/ButtonGroup"]
margin_top = 171.0
margin_right = 440.0
margin_bottom = 218.0
size_flags_horizontal = 5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_hover = Color( 0.317647, 0.317647, 0.317647, 1 )
text = "Versus Blitz"
flat = true

[node name="VersusAIBlitzButton2" type="Button" parent="MenuGroup/MarginContainer/ButtonGroup"]
margin_top = 228.0
margin_right = 440.0
margin_bottom = 275.0
size_flags_horizontal = 5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_hover = Color( 0.317647, 0.317647, 0.317647, 1 )
text = "Versus AI Blitz"
flat = true
[connection signal="pressed" from="MenuGroup/MarginContainer/ButtonGroup/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="MenuGroup/MarginContainer/ButtonGroup/BlitzButton" to="." method="_on_BlitzButton_pressed"]
[connection signal="pressed" from="MenuGroup/MarginContainer/ButtonGroup/AIBlitzButton" to="." method="_on_AIBlitzButton_pressed"]
[connection signal="pressed" from="MenuGroup/MarginContainer/ButtonGroup/VersusButton" to="." method="_on_VersusButton_pressed"]
[connection signal="pressed" from="MenuGroup/MarginContainer/ButtonGroup/VersusAIBlitzButton2" to="." method="_on_VersusAIBlitzButton_pressed"]
